syntax = "proto3";

option go_package = "./;paymentsproto";

service payments {
}
