syntax = "proto3";

import "google/protobuf/descriptor.proto";

message TyphonHandler {
    string method = 1;
    string path = 2;
    bool omit_proto_method = 3;
}

extend google.protobuf.MethodOptions {
    TyphonHandler handler = 4000;
}

message TyphonRouter {
    string name = 1;
}

extend google.protobuf.ServiceOptions {
    TyphonRouter router = 3000;
}
